<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="my_nanodegree">My Nanodegree Apps!</string>
    <string name="spotify_streamer">Spotify Streamer</string>
    <string name="scores_app">Scores app</string>
    <string name="library">Library App</string>
    <string name="build_it_bigger">Build It Bigger</string>
    <string name="xyz_reader">XYZ Reader</string>
    <string name="capstone">Capstone: My own App</string>
</resources>
