<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#badde9"

    android:orientation="vertical"
    tools:context="com.example.ahmed.myappportfolio.MainActivity">

    <TextView
        android:id="@+id/my_nanodegree_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/my_nanodegree"
        android:textSize="28sp" />

    <Button
        android:id="@+id/Spotify_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/my_nanodegree_text_view"
        android:layout_alignRight="@id/my_nanodegree_text_view"
        android:layout_below="@id/my_nanodegree_text_view"
        android:layout_marginTop="24dp"
        android:onClick="runApp"
        android:text="@string/spotify_streamer" />

    <Button
        android:id="@+id/scores_app_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/my_nanodegree_text_view"
        android:layout_alignRight="@id/my_nanodegree_text_view"
        android:layout_below="@id/Spotify_button"
        android:layout_centerHorizontal="true"
        android:onClick="runApp"
        android:text="@string/scores_app" />

    <Button
        android:id="@+id/library_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/my_nanodegree_text_view"
        android:layout_alignRight="@id/my_nanodegree_text_view"
        android:layout_below="@id/scores_app_button"
        android:layout_centerHorizontal="true"
        android:onClick="runApp"
        android:text="@string/library" />

    <Button
        android:id="@+id/build_it_app_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/my_nanodegree_text_view"
        android:layout_alignRight="@id/my_nanodegree_text_view"
        android:layout_below="@id/library_button"
        android:layout_centerHorizontal="true"
        android:onClick="runApp"
        android:text="@string/build_it_bigger" />

    <Button
        android:id="@+id/bacon_reader_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/my_nanodegree_text_view"
        android:layout_alignRight="@id/my_nanodegree_text_view"
        android:layout_below="@id/build_it_app_button"
        android:layout_centerHorizontal="true"
        android:onClick="runApp"
        android:text="@string/xyz_reader" />

    <Button
        android:id="@+id/capstone_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/my_nanodegree_text_view"
        android:layout_alignRight="@id/my_nanodegree_text_view"
        android:layout_below="@id/bacon_reader_button"
        android:layout_centerHorizontal="true"
        android:background="#ff2500"
        android:onClick="runApp"
        android:text="@string/capstone" />
</RelativeLayout>
